--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -1,65 +1,148 @@
 @import url('https://fonts.googleapis.com/css?family=Lato|Supermercado+One');
-
 /* 
     Add a CSS ruleset to accomplish the following:
     - Use the 'Lato' font family at 18px throughout the body of the document
     - cover the of the document background with the "map-bg.jpg" image in the images directory. 
 */
 
+body {
+    font-family: Lato;
+    font-size: 18px;
+    background-image: 
+    linear-gradient(rgba(256, 256, 256, 0.5), rgba(256, 256, 256, 0.5)), 
+    url('../images/map-bg.jpg');
+    background-size: cover;
+}
 
-nav {font-family: sans-serif;font-size: 10px;}
-#main {width: 900px; margin: 10px auto;}
+nav {
+    font-family: sans-serif;
+    font-size: 10px;
+}
+
+#main {
+    width: 900px;
+    padding: 10px;
+    margin: 10px auto;
+    border: 2px solid #5d4037;
+    
+    background-image: url('../images/map-bg.jpg');
+    background-size: cover;
+    -webkit-box-shadow: 5px 3px 10px 7px rgba(0, 0, 0, 0.77);
+    box-shadow: 5px 3px 10px 7px rgba(0, 0, 0, 0.77);
+}
 
 /* 
-    Add a CSS ruleset targeting the restaurant name to accomplish the following:
+    Add a CSS ruleset targeting the restaurant name to accomplish 
+    the following:
         - Use the 'Supermercado One' font 
         - set the font size to 45px 
         - set the font color to #5d4037
 */
 
+header h1 {
+    font-family: 'Supermercado One';
+    font-size: 45px;
+    color: #5d4037;
+    text-shadow: 20px 9px 7px rgba(112, 77, 66, 0.61);
+}
 
 /* 
     Update the following ruleset (#menu) to accomplish the following:
-        - Set the separator between the columns (the "column-rule") to be 2px dashed rosybrown. 
+        - Set the separator between the columns (the "column-rule") 
+        to be 2px dashed rosybrown. 
 */
+
 #menu {
     columns: 400px 2;
     column-gap: 100px;
+    column-rule: 3px dashed rosybrown;
+    
+
 }
 
-section {padding-bottom: 50px;}
-h2 {margin: 0;}
+section {
+    padding-bottom: 50px;
+}
+
+h2 {
+    margin: 0;
+    text-shadow: 10px 5px 3px rgba(112, 77, 66, 0.55);
+}
 
 /* 
-    Add a CSS ruleset targeting the headings of the menu (e.g. "Starters") to accomplish the following:
+    Add a CSS ruleset targeting the headings of the menu (e.g. "Starters") 
+    to accomplish the following:
         - Show each of the section headings of the menu  in small caps
         - set the font color to #6d4c41
 */
 
+#menu h2 {
+    font-variant: small-caps;
+    color: #6d4c41;
+}
 
 /* 
-    Add a CSS ruleset targeting the name of each menu item to accomplish the following:
+    Add a CSS ruleset targeting the name of each menu item to accomplish 
+    the following:
         - Set the font size to 20px
         - Make the font bold
 */
 
+#menu dt {
+    font-size: 20px;
+    font-weight: bold;
+    letter-spacing: 2.2px;
+    word-spacing: 1.6px
+}
 
-dd {margin: 0 0 12px 0; display: flex;}
-.details {order: 1;}
+/*dd {margin: 0 0 12px 0; display: flex;}*/
+
+/*.details {order: 1;}*/
+
+dd {
+    display: flex;
+    /*flex-direction: row;*/
+    margin: 5px 0 12px 3px;
+}
+
+.details {
+    order: 1;
+}
 
 /* 
      Update the following ruleset (.price) to accomplish the following:
         - Show the price of each item in a large font
         - set the font color to 'firebrick'
 */
+
 .price {
     order: 2;
     padding-left: 10px;
+    font-size: large;
+    /*font-size: 105%;*/
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: -1.8px;
+    color: firebrick;
 }
 
-address {padding: 10px;}
+address {
+    padding: 10px;
+}
 
 /* 
     Add a CSS ruleset targeting the footer to accomplish the following:
         - Draw a 2px dashed rosybrown border
 */
+#main a:hover{
+    color: firebrick;;
+    
+    border: 2px solid #6d4c41;
+    background-color: cornsilk;
+    font-weight: bold;
+}
+
+footer {
+    border: 2px dashed rosybrown;
+    box-shadow: 2px 1px 5px 3px rgba(0, 0, 0, 0.2);
+}
