--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,13 +1,34 @@
 @import url('https://fonts.googleapis.com/css?family=Bungee+Inline|Oswald');
-
 /* 
     Add a CSS ruleset to accomplish the following:
     - Use the 'Oswald' font family at 14px throughout the body of the document.
 */
 
+body {
+    font-family: Oswald;
+    font-size: 14px;
+}
 
-nav {font-family: sans-serif; font-size: 10px;}
-#main {width: 900px; margin: 10px auto;}
+nav {
+    font-family: sans-serif;
+    font-size: 10px;
+}
+
+nav a:hover {
+    border: 1px solid black;
+    color: red;
+    text-shadow: 2px 2px 4px rgba(22, 21, 21, 0.71);
+}
+
+#main {
+    width: 900px;
+    margin: 10px auto;
+    padding: 15px;
+    border: 1px solid black;
+    
+    -webkit-box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, -1px -1px 14px 8px rgba(255, 67, 76, 0.27);
+    box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, -1px -1px 14px 8px rgba(255, 67, 76, 0.27);
+}
 
 /* 
     Add a CSS ruleset targeting the restaurant name to accomplish the following:
@@ -16,25 +37,54 @@ nav {font-family: sans-serif; font-size: 10px;}
         - use a lighter weight font
 */
 
+#main h1 {
+    font-family: 'Bungee Inline';
+    font-size: 46px;
+    font-weight: lighter;
 
-#menu {columns: 420px 2; column-gap: 60px;}
-section {margin-bottom: 20px; padding: 10px;}
+    text-shadow: 2px 2px 4px rgba(229,68,5,0.71);
+}
 
-h2 {margin-top: 0;}
+#menu {
+    columns: 420px 2;
+    column-gap: 60px;
+}
+
+section {
+    margin-bottom: 20px;
+    padding: 10px;
+}
+
+h2 {
+    margin-top: 0;
+}
 
 /* 
-    Add a CSS ruleset targeting targeting the headings of the menu (e.g. "Starters") to accomplish the following:
+    Add a CSS ruleset targeting the headings of the menu (e.g. "Starters") 
+    to accomplish the following:
         - Show each of the section headings of the menu in uppercase
 */
 
+#menu h2 {
+    text-transform: uppercase;
+
+    text-shadow: 2px 2px 2px rgba(229,68,5,0.57);
+}
 
 /* 
      Update the following ruleset (dt) to accomplish the following:
         - Make the name of each menu item appear in bold 
         - set the font size to 16px
 */
+
+#menu dt {
+    font-size: 16px;
+    font-weight: bold;
+}
+
 dt {
     display: inline;
+    font-size: 16px;
 }
 
 /* 
@@ -42,23 +92,48 @@ dt {
     - Make a comma appear after the name of each menu item
 */
 
+dt::after {
+    content: ', ';
+}
 
+dd {
+    display: inline;
+    margin: 0;
+}
 
-dd {display: inline; margin: 0;}
-dd::after {content: " "; display: block; clear: both; margin-bottom: 15px;}
+dd::after {
+    content: " ";
+    display: block;
+    clear: both;
+    margin-bottom: 15px;
+}
 
-.price {float: right; padding: 0 0 35px 20px;}
+.price {
+    float: right;
+    padding: 0 0 35px 20px;
+    font-weight: bolder;
+}
 
 /* 
     Add a CSS ruleset targeting the footer to accomplish the following:
     - right align the text in the footer
 */
 
-
+footer {
+    text-align: right;
+}
 
 /* 
     Add a CSS ruleset targeting the starters and desserts sections to accomplish the following:
     - draw a 2px black border around the sections
 */
 
+#starters, #desserts {
+    border: 1px solid black;
+    background-color: rgb(250, 250, 250);
 
+
+
+    -webkit-box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, -3px 0px 16px -1px rgba(255,67,76,0.37); 
+box-shadow: -10px 0px 13px -7px #000000, 10px 0px 13px -7px #000000, -3px 0px 16px -1px rgba(255,67,76,0.37);
+}
